--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,23 @@
-*.log
+## MAC OS
 .DS_Store
-nbproject
-pkg
-*.gem
+
+## TEXTMATE
+*.tmproj
+tmtags
+
+## EMACS
+*~
+\#*
+.\#*
+
+## VIM
 *.swp
+
+## PROJECT::GENERAL
+coverage
+rdoc
+pkg
+
+## PROJECT::SPECIFIC
+*.log
+nbproject
